--- a/content/modules/ROOT/nav.adoc
+++ b/content/modules/ROOT/nav.adoc
@@ -44,6 +44,7 @@
 *** xref:module-07.adoc#ts_lab_network[Lab Network Overview]
 *** xref:module-07.adoc#ts_general_post_deployk[Post-Deployment Troubleshooting]
 *** xref:module-07.adoc#ts_vm_network_troubleshooting[VM Network Troubleshooting]
+** xref:module-07.adoc#deployment_issues[Deployment Issues]
 
 * xref:module-08.adoc[8. Data Protection with OADP]
 ** xref:module-08.adoc#objectbucketclaim[Object Bucket Claim]
