--- a/content/modules/ROOT/pages/26_Closeout.adoc
+++ b/content/modules/ROOT/pages/26_Closeout.adoc
@@ -2,7 +2,7 @@
 
 == We hope that you found this bootcamp to be informative and educational
 
-link:https://docs.google.com/forms/d/e/1FAIpQLSd6LlAXh2ogLXLsvW-t5gwktvQyOEKW0MgO0C7cA6TxrTAZ-A/viewform?usp=sf_link[Survey]
+link:https://forms.gle/6vJL3cEYx1zHD6gC8[Please take a moment to fill out our survey^]
 
 == Take your EX316!
 
