--- a/content/modules/ROOT/pages/module-03.adoc
+++ b/content/modules/ROOT/pages/module-03.adoc
@@ -157,7 +157,7 @@ Additional disks may be required for an application that runs on the virtual mac
 +
 image::module-03/20_VM_addDisk.png[link=self, window=blank,width=100%]
 +
-. Click the *Add Disk* icon.  In the _Add Disk_ dialog window, update the name to *appdisk*, and enter 5 GiB for the _PersistentVolumeDisk size_.  Click the *Save* icon.  The PVC and underlying PV will be created and attached to the VM as /dev/sda in this case.  
+. Click the *Add Disk* icon.  In the _Add Disk_ dialog window, update the name to *appdisk*, and enter 5 GiB for the _PersistentVolumeDisk size_, and update the StorageClass to *ocs-storagecluster-ceph-rbd*.  Click the *Save* icon.  The PVC and underlying PV will be created and attached to the VM as /dev/sda in this case.  
 +
 image::module-03/21_VM_addDiskpopup.png[link=self, window=blank,width=100%]
 +
